--- a/spec/suite.html
+++ b/spec/suite.html
@@ -2,16 +2,17 @@
   <head>
     <script src="screw_unit/jquery-1.3.2.js"></script>
     <script src="screw_unit/jquery.fn.js"></script>
+    <script src="screw_unit/jquery.print.js"></script>
     <script src="screw_unit/screw.builder.js"></script>
     <script src="screw_unit/screw.matchers.js"></script>
     <script src="screw_unit/screw.events.js"></script>
     <script src="screw_unit/screw.behaviors.js"></script>
 		
     <script src="../lib/iSpy.js"></script>
-    <script src="../lib/jquery.print.js"></script>
+
     <script src="../plugins/screw.iSpy.js"></script>
 
-    <script src="i_spy_spec.js"></script>
+    <script src="i_spy_test.js"></script>
 
     <link rel="stylesheet" href="screw_unit/screw.css">
   </head>
